# ROS_Training_AnasSenouci-

devel/: .catkin  _setup_util.py  local_setup.sh
devel/lib/pkgconfig/: space_tut.pc
devel/lib/space_tut/: printer
devel/share/space_tut/cmake/: space_tutConfig.cmake
src/space_tut/: CMakeLists.txt
src/space_tut/launch/: tutorial.launch
src/space_tut/script/: faxer.py
src/space_tut/src/: printer.cpp
